refine code and fix alignment

--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,46 @@
+/* Basic background color + Main font of the content, size and text-shadow.  */
 body {
     background-color: rgba(238, 166, 12, 0.911);
     font-family: fantasy, 'Times New Roman', Times, serif;
     font-size: 15px;
-    text-align: center;
 }
 
 /* rounded background of yellow mustard color*/
 .roundB {
     border-radius: 25px;
     background-color: rgb(255, 212, 20);
+    width: max-content;
 }
 
 h1 {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 40px;
-    font-style: oblique;
-    font-variant: small-caps;
+    font-size: 28px;
+    margin: 10px auto;
     text-align: center;
-}
-
-li {
-    font-weight: bold;
 }
 
 p {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 15px;
+    font-style: italic;
     background-color: rgb(255, 212, 20);
     font-weight: bold;
+    width: max-content;
+    border-radius: 25px;
 }
 
-.center {
+.centerImg {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.leftA {
+    margin: 10px auto;
+    text-align: left;
     list-style-position: inside;
+}
+
+li {
+    margin: 10px auto;
+    text-align: left;
 }
